--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react-router": "^2.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "html-webpack-plugin": "^2.15.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
